# openapi/LinkShortener.json
@@ -260,6 +260,10 @@
             "format": "date-time",
             "type": "string"
           },
+          "last_updated": {
+            "format": "date-time",
+            "type": "string"
+          },
           "long_url": {
             "minLength": 1,
             "type": "string"
@@ -269,7 +273,8 @@
           }
         },
         "required": [
-          "long_url"
+          "long_url",
+          "last_updated"
         ],
         "type": "object"
       },
@@ -297,6 +302,10 @@
             "format": "int64",
             "type": "integer"
           },
+          "last_updated": {
+            "format": "date-time",
+            "type": "string"
+          },
           "long_url": {
             "type": "string"
           },
@@ -304,10 +313,6 @@
             "type": "string"
           },
           "shortcode": {
-            "type": "string"
-          },
-          "updated_at": {
-            "format": "date-time",
             "type": "string"
           }
         },
@@ -317,7 +322,7 @@
           "long_url",
           "short_url",
           "created_at",
-          "updated_at"
+          "last_updated"
         ],
         "type": "object"
       },
@@ -336,14 +341,14 @@
             "format": "int64",
             "type": "integer"
           },
+          "last_updated": {
+            "format": "date-time",
+            "type": "string"
+          },
           "long_url": {
             "type": "string"
           },
           "shortcode": {
-            "type": "string"
-          },
-          "updated_at": {
-            "format": "date-time",
             "type": "string"
           }
         },
@@ -352,7 +357,7 @@
           "shortcode",
           "long_url",
           "created_at",
-          "updated_at"
+          "last_updated"
         ],
         "type": "object"
       }
